# open-notes

./: .env.example  .gitignore  README.md  SPEC.md  flake.nix  pyproject.toml
config/: default.yaml
docs/: index.md  pipeline.md
docs/code/: config.md  models.md
docs/guides/: getting-started.md
open_notes/: __init__.py  config.py  models.py
open_notes/cli/: main.py
open_notes/embedding/: base.py  transformers.py
open_notes/indexer/: chunker.py  parser.py  watcher.py
open_notes/llm/: base.py  llama_cpp.py
open_notes/mcp/: server.py
open_notes/query/: engine.py
open_notes/rag/: pipeline.py
open_notes/storage/: file_system.py  keyword_index.py  vector_db.py
tests/: conftest.py  test_cli.py  test_config.py  test_embedding.py  test_integration.py  test_models.py  test_query.py  test_rag.py
tests/fixtures/notes/: ml_notes.md  python_guide.md  shell_scripting.md  simple_note.md
tests/indexer/: test_chunker.py
tests/storage/: test_file_system.py  test_keyword_index.py  test_vector_db.py
